--- a/src/styles/main/_card.scss
+++ b/src/styles/main/_card.scss
@@ -1,6 +1,12 @@
 .card {
   display: flex;
   gap: 2.4rem;
+  overflow: hidden;
+
+  & img {
+    width: 10rem;
+    height: 12.7rem;
+  }
 
   &-num {
     display: block;
@@ -12,8 +18,17 @@
     display: block;
     margin-top: 1.2rem;
     height: 2.7rem;
+    overflow: hidden;
+    white-space: nowrap;
+    max-width: 22.6rem;
+    text-overflow: ellipsis;
     transition: $transition-x1;
     @include font(1.8rem, $very-dark-blue, 150%, $font-weight-bold);
+
+    @media screen and (max-width: $width-desktop) {
+      max-width: 20.2rem;
+      font-size: 1.5rem;
+    }
   }
 
   &:hover &-title {
